--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-native": "0.72.5",
+    "react-native-image-picker": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
